--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Backend for Unite DeFi application",
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "nodemon --exec \"tsx watch src/index.ts\"",
     "clean": "rm -rf dist",
     "prebuild": "npm run clean",
     "type-check": "tsc --noEmit",
@@ -24,10 +25,12 @@
     "@types/node": "^24.1.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
+    "tsx": "^4.7.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@1inch/limit-order-sdk": "^5.0.3",
+    "@1inch/limit-order-sdk": "5.0.3",
+    "axios": "^1.11.0",
     "dotenv": "^17.2.1"
   }
 }
