--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
-		"target": "ES2020",
-		"module": "commonjs",
-		"moduleResolution": "node",
+		"target": "ES2022",
+		"module": "ESNext",
+		"moduleResolution": "Node",
 		"strict": true,
 		"esModuleInterop": true,
 		"resolveJsonModule": true,
@@ -19,6 +19,7 @@
 		"allowSyntheticDefaultImports": true
 	},
 	"ts-node": {
+		"esm": true,
 		"transpileOnly": true,
 		"experimentalSpecifierResolution": "node"
 	},
