--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,9 @@
   },
   "dependencies": {
     "@1inch/limit-order-sdk": "5.0.3",
+    "@types/node-fetch": "^2.6.12",
     "axios": "^1.11.0",
-    "dotenv": "^17.2.1"
+    "dotenv": "^17.2.1",
+    "node-fetch": "^3.3.2"
   }
 }
