--- a/resolver/package.json
+++ b/resolver/package.json
@@ -18,8 +18,11 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@1inch/limit-order-sdk": "^4.9.5-rc.0",
     "@types/express": "^5.0.3",
+    "dotenv": "^17.2.1",
     "ethers": "^6.15.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "tsx": "^4.20.3"
   }
 }
