order submission works on anvil thru frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,19 @@
         "@1inch/limit-order-sdk": "^4.9.5-rc.0",
         "@compass-labs/api-sdk": "^0.5.65",
         "@radix-ui/react-slot": "^1.1.0",
+        "@tanstack/react-query": "^5.84.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "ethers": "^6.15.0",
         "lucide-react": "^0.438.0",
         "next": "14.2.23",
+        "pino-pretty": "^13.1.1",
         "react": "^18",
         "react-dom": "^18",
         "tailwind-merge": "^2.5.2",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "viem": "^2.33.2",
+        "wagmi": "^2.16.1"
     },
     "devDependencies": {
         "@types/node": "^20",
