--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "--host"
       - "0.0.0.0"
       - "--fork-url"
-      - "${ARBITRUM_RPC_URL}"
+      - "${BASE_RPC_URL}"
       - "--port"
       - "8547"
       - "--chain-id"
