--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "dependencies": {
         "@1inch/byte-utils": "^3.1.0",
         "@1inch/limit-order-sdk": "^4.9.5-rc.0",
-        "@compass-labs/api-sdk": "^0.5.65",
+        "@compass-labs/api-sdk": "0.5.65",
         "@radix-ui/react-slot": "^1.1.0",
         "@tanstack/react-query": "^5.84.0",
         "class-variance-authority": "^0.7.0",
