--- a/resolver/package.json
+++ b/resolver/package.json
@@ -1,11 +1,13 @@
 {
   "name": "resolver",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "dev": "ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "vercel-dev": "vercel dev",
+    "deploy": "vercel --prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +16,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^24.1.0",
+    "@vercel/node": "^3.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
@@ -21,6 +24,7 @@
     "@1inch/limit-order-sdk": "^4.9.5-rc.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@vercel/kv": "^3.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "ethers": "^6.15.0",
